@@ -16,7 +16,12 @@
 #   The configuration directory holding the 'puppet.conf' file.
 #
 # @param section
-#   The Sections of the puppet.conf to set.
+#   The Section of the puppet.conf to set.
+#
+#   * If ``$setting`` is trying to be set to ``environment``, then this will be
+#     forced to ``agent`` to work around various puppet command bugs.
+#
+#   @see https://simp-project.atlassian.net/browse/SIMP-6820
 #
 # @param ensure
 #  Determines whether the specified setting should exist.
@@ -30,8 +35,18 @@ define pupmod::conf (
   String $section = $setting ? { 'environment' => 'agent', default => 'main' },
   Enum['present', 'absent'] $ensure = 'present',
 ) {
-
   $l_name = "${module_name}_${name}"
+
+  if $setting == 'environment' {
+    if !defined(Ini_setting['remove environment from main']) {
+      ini_setting { 'remove environment from main':
+        ensure  => absent,
+        path    => "${confdir}/puppet.conf",
+        section => 'main',
+        setting => 'environment'
+      }
+    }
+  }
 
   ini_setting { $l_name:
     ensure  => $ensure,
